syntax = "proto3";

service FileService {
    rpc ListFiles (ListFilesRequest) returns (ListFilesResponse);
    rpc SearchFiles (SearchFilesRequest) returns (SearchFilesResponse);
}

message ListFilesRequest {}

message ListFilesResponse {
    repeated string filenames = 1;
}

message SearchFilesRequest {
    string name = 1;
}

message SearchFilesResponse {
    repeated string searchResponse = 1;
}